--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
 
    	 <!-- Bootstrap CSS -->
    	 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
    	 <title>BINA</title>
   </head>
   <body>
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-		<a class="navbar-brand" href="#">BINA@CCB</a>
+		<a class="navbar-brand" href="#">Home</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
 		</button>
@@ -87,30 +86,6 @@
     <li class="breadcrumb-item active" aria-current="page">Data</li>
   </ol>
 </nav>
-
-<nav class="navbar fixed-bottom navbar-expand-lg navbar-light bg-light">
-	<nav class="navbar navbar-light bg-light">
-        	<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Last changes: 01.01.73</a>
-	</nav>
-			<ul class="navbar-nav  flex-row ml-md-auto d-none d-md-flex">	
-
-			<li class="nav-item">
-			<a class="nav-link" href="https://github.com/BINA-CCB/BINA-CCB.github.io"><i class="fa fa-github"></i> GitHub</a>
-			</li>
-	<li class="nav-item">
-        	<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">© 2019 BINA@CCB</a>
-	</li>
-
-</nav>
-
-<div class="jumbotron">
-  <h1 class="display-4">Hello, world!</h1>
-  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-  <hr class="my-4">
-  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-  <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
-</div>
-
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
