--- a/index.html
+++ b/index.html
@@ -1,116 +1,136 @@
 <!doctype html>
 <html lang="en">
 	<head>
-   	 <!-- Required meta tags -->
-    	<meta charset="utf-8">
-    	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-   	 <!-- Bootstrap CSS -->
-   	 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-   	 <title>BINA</title>
+		<title>BINA</title>
   </head>
   <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 		<a class="navbar-brand" href="#">BINA@CCB</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="navbar-toggler-icon"></span>
+			<span class="navbar-toggler-icon"></span>
 		</button>
 
-		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<ul class="navbar-nav mr-auto">
+	<div class="collapse navbar-collapse" id="navbarSupportedContent">
+		<ul class="navbar-nav mr-auto">
 			<li class="nav-item active">
-			<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+				<a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
 			</li>
+
+			<li class="nav-item">
+				<a class="nav-link" href="experiments">Experiments</a>
+			</li>
+
+
 
 			<li class="nav-item dropdown">
-			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-			Experiments
-			</a>
-			<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-				<a class="dropdown-item" href="#">BINA@CCB 2019</a>
-				<a class="dropdown-item" href="#">Another action</a>
-				<div class="dropdown-divider"></div>
-				<a class="dropdown-item" href="#">Something else here</a>
-			</div>
-			</li>
-
-			<li class="nav-item dropdown">
-			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-			Files
-			</a>
-			<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-				<a class="dropdown-item" href="#">Publications</a>
-				<div class="dropdown-divider"></div>
-				<a class="dropdown-item" href="#">Presentations</a>
-				<a class="dropdown-item" href="#">Posters</a>
-			</div>
+				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					Files
+				</a>
+				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+					<a class="dropdown-item" href="publications">Publications</a>
+					<div class="dropdown-divider"></div>
+					<a class="dropdown-item" href="presentations">Presentations</a>
+					<a class="dropdown-item" href="posters">Posters</a>
+				</div>
 			</li>
 
 			<li class="nav-item">
-			<a class="nav-link" href="#">Members</a>
+				<a class="nav-link" href="members">Members</a>
 			</li>
 
 
 			<li class="nav-item">
-			<a class="nav-link" href="#">Links</a>
+			<a class="nav-link" href="#links">Links</a>
 			</li>
 
 			<li class="nav-item">
-			<a class="nav-link" href="#">Contact</a>
+				<a class="nav-link" href="#" data-toggle="modal" data-target="#ContactsModal">Contact</a>
 			</li>
-			</ul>
+		</ul>
 
 
-			<ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">	
-
+		<ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">	
 			<li class="nav-item">
-			<a class="nav-link" href="#">Log In</a>
+				<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter"> {{username}} </button>
 			</li>
-
-			<form class="form-inline my-2 my-lg-0">
-			<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-			<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-			</form>
-			</ul>
-
-		</div>
+		</ul>
+	</div>
 	</nav>
 
 
-<nav aria-label="breadcrumb">
-  <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="#">Home</a></li>
-    <li class="breadcrumb-item"><a href="#">Library</a></li>
-    <li class="breadcrumb-item active" aria-current="page">Data</li>
-  </ol>
-</nav>
-
-<nav class="navbar fixed-bottom navbar-expand-lg navbar-light bg-light">
-	<nav class="navbar navbar-light bg-light">
-        	<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Last changes: 01.01.73</a>
+	<nav aria-label="breadcrumb">
+		<ol class="breadcrumb">
+			<li class="breadcrumb-item"><a href="#">Home</a></li>
+			<li class="breadcrumb-item"><a href="#">Library</a></li>
+			<li class="breadcrumb-item active" aria-current="page">Data</li>
+		</ol>
 	</nav>
-			<ul class="navbar-nav  flex-row ml-md-auto d-none d-md-flex">	
 
-			<li class="nav-item">
+	<nav class="navbar fixed-bottom navbar-expand-lg navbar-light bg-light">
+		<nav class="navbar navbar-light bg-light">
+			<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Last changes: 01.01.73</a>
+	</nav>
+	<ul class="navbar-nav  flex-row ml-md-auto d-none d-md-flex">	
+		<li class="nav-item">
 			<a class="nav-link" href="https://github.com/BINA-CCB/BINA-CCB.github.io"><i class="fa fa-github"></i> GitHub</a>
-			</li>
-	<li class="nav-item">
-        	<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">© 2019 BINA@CCB</a>
-	</li>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">© 2019 BINA@CCB</a>
+		</li>
+	</nav>
 
-</nav>
 
 <div class="jumbotron">
-  <h1 class="display-4">Hello, world!</h1>
-  <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-  <hr class="my-4">
-  <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-  <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+<a href="http://bina.szadzinski.pl/" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">DEV</a>
+<a href="http://bina.szadzinski.pl/" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">BETA</a>
 </div>
 
+
+	<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalCenterTitle">Log in</h5>
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+				</div>
+				<div class="modal-body">
+					<form method="post">
+						<div class="form-group">
+							<label for="passwd">Enter password:</label>
+								<input type="password" class="form-control" id="passwd" name="password">
+						</div>
+						<input class="btn btn-primary" type="submit" name="passw" value="Login">
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+	<div class="modal fade" id="ContactsModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalCenterTitle">Contacts</h5>
+						<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+				</div>
+				<div class="modal-body">
+					TODO
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
